Bug 462173 - We treat transaction errors as fatal when we should not r=asuth