storage/public/mozStorageHelper.h
@@ -41,6 +41,7 @@
 
 #include "mozIStorageConnection.h"
 #include "mozIStorageStatement.h"
+#include "mozStorage.h"
 
 
 /**
@@ -110,7 +111,16 @@ public:
     mCompleted = PR_TRUE;
     if (! mHasTransaction)
       return NS_ERROR_FAILURE;
-    return mConnection->RollbackTransaction();
+
+    // It is possible that a rollback will return busy, so we busy wait...
+    nsresult rv = NS_OK;
+    do {
+      rv = mConnection->RollbackTransaction();
+      if (rv == NS_ERROR_STORAGE_BUSY)
+        (void)PR_Sleep(PR_INTERVAL_NO_WAIT);
+    } while (rv == NS_ERROR_STORAGE_BUSY);
+
+    return rv;
   }
 
   /**
